actors update
